--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   
   <body style = "background-color:gray">
     <heading>
-    <h1 align = "center">Welcome to my Homepage</h1>
+    <h1 align = "center">Alpha-Blog</h1>
     </heading>
     <table border = 1 width = 90% height = 90% align = "center" b style = "background-color:lightgray">
       <tr width = 100$ height = 50>
@@ -14,7 +14,7 @@
       </tr>
       <tr width = 100% height = 450>
         <td align = "center" colspan = 5>
-          <p>This is my first html page so I hope you're not dissapointed :)</p>
+          <p>I'm still working on alpha-blog, but stay tuned :)</p>
         </td>
       </tr>
     </table>
