Added style and Articles page

--- a/app/views/pages/articles.html.erb
+++ b/app/views/pages/articles.html.erb
@@ -1,6 +1,6 @@
 <html>
   <head>
-      <title>Homepage</title>
+      <title>Articles</title>
       <style>
         body{
     
@@ -54,12 +54,15 @@ h1 {
         </ul>
           
         </td>
-    </table>
-    
-          <p align = "center"><%= image_tag 'ljudi.jpg' %></p>
-      
-  
-    
+    <table border = 1 width = 435 height = 335 align = "center" style = "background-color:lightgray">
+      <tr align = "center">
+        <td style = "color:black">
+          Still working on Articles, but stay tuned to see my progress :)
+          
+        </td>
+       </tr> 
+      </table>  
   </body>
   
 </html>
+
