--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,38 +1,70 @@
 <html>
-  
-  <body style = "background-color:gray">
-    <heading>
-    <h1 align = "center">About</h1>
-    </heading>
-    <table border = 1 width = 90% height = 90% align = "center" b style = "background-color:lightgray">
-      <tr width = 100$ height = 50>
-        <td align = "center"><%= link_to 'Home', root_path %></td>
-        <td align = "center"style = "background-color:darkgray"><%= link_to 'About', about_path %></td>
-        <td align = "center">Some</td>
-        <td align = "center">Some</td>
-        <td align = "center">Some</td>
-      </tr>
-      </table>
-      <br>
-      <br>
-      <table align = "center" width = 50% height = 300 style = "background-color:lightgray">
-      <tr>
-        <td>
-          <ul>
-              <li>Name : Aleksandar Kalabic</li>
-              <li>Age : 21</li>
-              <li>Status : Student</li>
-              <li>College : Racunarski Fakultet Beograd</li>
-              <li>Year : 2</li>
-          </ul>
-        </td>
-      </tr>
-      </table>
+  <head>
+      <title>About</title>
+      <style>
+        body{
     
+    background-color:#222;
+    color:lightgray;
+    
+}
+h1 {
+  font-family:vedrana;
+    font-size:300%;
+}
+#menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+#menuItem {
+    float: left;
+}
+
+#menuItem a {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+#menuItem a:hover {
+    background-color: #111;
+}
+      </style>
+      
+  </head>
   
-    <h2 align = "center">
-      <%= link_to 'Go back to Homepage', root_path %>
-    </h2>
+  <body>
+    <heading>
+    <h1 align = "center">Alpha-Blog</h1>
+    </heading>
+    <table border = 1 width = 236 align = "center" style = "background-color:lightgray">
+      <tr width = 100$ height = 50 align = "center">
+        
+        <td>
+        <ul id = "menu" align = "center">
+          <li id ="menuItem"><%= link_to 'Home', root_path %></li>
+          <li id ="menuItem"><%= link_to 'Articles', articles_path %></li>
+          <li id ="menuItem"><%= link_to 'About', about_path %></li>
+        </ul>
+          
+        </td>
+    <table border = 1 width = 435 height = 335 align = "center" style = "background-color:lightgray">
+      <tr align = "center">
+        <td style = "color:black">
+          Alpha-Blog is an application designed to help explaining Rails<br>
+          on Rubi DE. This blog was created by Aleksandar Kalabic  <br>
+          You can find me on <%= link_to 'Github:akalabic14', "https://github.com/akalabic14", :target => "_blank" %> <br>
+          
+        </td>
+       </tr> 
+      </table>  
   </body>
   
 </html>
+
