--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -43,7 +43,7 @@ h1 {
     <heading>
     <h1 align = "center">Alpha-Blog</h1>
     </heading>
-    <table border = 1 width = 236 align = "center" style = "background-color:lightgray">
+    <table border = 1 align = "center" style = "background-color:lightgray">
       <tr width = 100$ height = 50 align = "center">
         
         <td>
@@ -54,11 +54,14 @@ h1 {
         </ul>
           
         </td>
-    <table border = 1 width = 435 height = 335 align = "center" style = "background-color:lightgray">
+      </tr>
+    </table>
+    <br>
+    <table border = 1 width = 480 height = 300 align = "center" style = "background-color:lightgray">
       <tr align = "center">
         <td style = "color:black">
           Alpha-Blog is an application designed to help explaining Rails<br>
-          on Rubi DE. This blog was created by Aleksandar Kalabic  <br>
+          on Ruby. This blog was created by Aleksandar Kalabic  <br>
           You can find me on <%= link_to 'Github:akalabic14', "https://github.com/akalabic14", :target => "_blank" %> <br>
           
         </td>
