--- a/app/views/pages/articles.html.erb
+++ b/app/views/pages/articles.html.erb
@@ -43,7 +43,7 @@ h1 {
     <heading>
     <h1 align = "center">Alpha-Blog</h1>
     </heading>
-    <table border = 1 width = 236 align = "center" style = "background-color:lightgray">
+    <table border = 1 align = "center" style = "background-color:lightgray">
       <tr width = 100$ height = 50 align = "center">
         
         <td>
@@ -54,7 +54,10 @@ h1 {
         </ul>
           
         </td>
-    <table border = 1 width = 435 height = 335 align = "center" style = "background-color:lightgray">
+      </tr>
+    </table>
+    <br>
+    <table border = 1 width = 480 height = 300 align = "center" style = "background-color:lightgray">
       <tr align = "center">
         <td style = "color:black">
           Still working on Articles, but stay tuned to see my progress :)
@@ -62,6 +65,7 @@ h1 {
         </td>
        </tr> 
       </table>  
+      
   </body>
   
 </html>
