--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -43,7 +43,7 @@ h1 {
     <heading>
     <h1 align = "center">Alpha-Blog</h1>
     </heading>
-    <table border = 1 width = 236 align = "center" style = "background-color:lightgray">
+    <table border = 1 align = "center" style = "background-color:lightgray">
       <tr width = 100$ height = 50 align = "center">
         
         <td>
