Create fixed and created show

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -60,28 +60,12 @@ h1 {
     <table border = 1 width = 480 height = 300 align = "center" style = "background-color:lightgray">
       <tr align = "center">
         <td style = "color:black">
-          <% if @article.errors.any? %>
-            <ul>
-            <h2>The article could not be created</h2>
-              <% @article.errors.full_messages.each do |msg| %>
-                <li><%= msg %></li>
-              <% end %>
-            </ul>
-          <% end %>
-          <%= form_for @article do |f| %>
+          <h3>
+            <%= @article.title %> <br/>
+          </h3>
           <p>
-           <%= f.label :title %> <br/>
-           <%= f.text_field :title %>
+            <%= @article.description %>
           </p>
-          <p>
-            <%= f.label :description %> <br/>
-            <%= f.text_area :description %>
-          </p>
-          <p>
-            <%= f.submit %>
-          </p>
-          
-          <% end %>
         </td>
        </tr> 
       </table>  
@@ -89,4 +73,3 @@ h1 {
   </body>
   
 </html>
-
