--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -56,10 +56,21 @@ h1 {
           
         </td>
     </table>
-    
-          <p align = "center"><%= image_tag 'ljudi.jpg' %></p>
-      
-  
+    <table border = 1 width = 480 height = 300 align = "center" style = "background-color:lightgray">
+    <tr align = "center">
+      <td>
+    <% @articles.each do |article| %>
+    <p align = "center">
+      <h2 style = "color:black"><%= article.title %></h2>
+      <h4 style = "color:black"><%= article.description %></h4>
+      <%= link_to 'Edit', edit_article_path(article) %>
+      <%= "  |  " %>
+      <%= link_to 'Show', article_path(article) %>
+    </p>
+    <% end %>
+    </td>
+    </tr>
+    </table>
     
   </body>
   
