added destroy action

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -49,7 +49,7 @@ h1 {
         <td>
         <ul id = "menu" align = "center">
           <li id ="menuItem"><%= link_to 'Home', root_path %></li>
-          <li id ="menuItem"><%= link_to 'Articles', new_article_path %></li>
+          <li id ="menuItem"><%= link_to 'Articles', articles_path %></li>
           <li id ="menuItem"><%= link_to 'About', about_path %></li>
         </ul>
           
