--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,41 +1,7 @@
 <html>
   <head>
       <title>Edit Article</title>
-      <style>
-        body{
-    
-    background-color:#222;
-    color:lightgray;
-    
-}
-h1 {
-  font-family:vedrana;
-    font-size:300%;
-}
-#menu {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-}
-
-#menuItem {
-    float: left;
-}
-
-#menuItem a {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-#menuItem a:hover {
-    background-color: #111;
-}
-      </style>
+      <%= render 'style' %>
       
   </head>
   
