fixed flash and error messages

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,34 +1,8 @@
 <html>
     
-  <table border = 1 width = 480 height = 300 align = "center" style = "background-color:lightgray">
-    <tr align = "center">
-      <td style = "color:black">
-        <% if @article.errors.any? %>
-          <ul>
-            <h2>The article could not be created</h2>
-              <% @article.errors.full_messages.each do |msg| %>
-                <li><%= msg %></li>
-              <% end %>
-          </ul>
-        <% end %>
-        <%= form_for @article do |f| %>
-          <p>
-           <%= f.label :title %> <br/>
-           <%= f.text_field :title %>
-          </p>
-          <p>
-            <%= f.label :description %> <br/>
-            <%= f.text_area :description %>
-          </p>
-          <p>
-            <%= f.submit %>
-          </p>
-        <% end %>
-        </td>
-      </tr> 
-    </table>  
-      
-  </body>
-  
+  <div align = "center" style = "background-color:#959595;color:black">
+    <h2>Create a new article</h2>
+    <%= render 'form' %>
+  </div>  
 </html>
 
