--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,13 +8,7 @@
 </head>
 <body>
   <%= render 'layouts/navigation' %>
-  <ul>
-  <% flash.each do |name,msg| %>
-  
-    <li><%= msg %></li>
-  
-  <% end %>
-  </ul>
+  <%= render 'shared/messages' %>
   <div class = "container">
      <%= yield %>
   </div>
