--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,22 +1,23 @@
 <html>
-    <table border = 1 width = 480 height = 300 align = "center" style = "background-color:lightgray">
-      <tr align = "center">
-        <td>
-        <% @articles.each do |article| %>
-        <p align = "center">
-          <h2 style = "color:black"><%= article.title %></h2>
-          <h4 style = "color:black"><%= article.description %></h4>
-          <%= link_to 'Edit', edit_article_path(article) %>
-          <%= "  |  " %>
-          <%= link_to 'Show', article_path(article) %>
-          <%= "  |  " %>
-          <%= link_to 'Delete', article_path(article), method: :delete, data: {confirm: "Are you sure?"} %>
-        </p>
-        <% end %>
-        </td>
-      </tr>
-    </table>
-    
-  </body>
-  
+<h1 align="center">Articles</h1>
+<% @articles.each do |article| %>
+  <div class="row">
+    <div class="col-xs-8 col-xs-offset-2">
+      <div class="well well-lg">
+        <div class="article-title">
+          <%= link_to article.title, article_path(article) %>
+        </div>
+        <div class="article-body">
+          <%= truncate(article.description, length: 100) %>
+        </div>
+        <div class="article-actions">
+          <%= link_to "Edit", edit_article_path(article), class: "btn btn-xs btn-primary" %>
+          <%= link_to "Delete", article_path(article), method: :delete,
+                                data: { confirm: "Are you sure you want to delete the article?"},
+                                class: "btn btn-xs btn-danger" %>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
 </html>
