--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,12 +1,11 @@
 <html>
-  <table border = 1 width = 480 height = 300 align = "center" style = "background-color:lightgray">
-    <tr align = "center">
-      <td style = "color:black">
-        Alpha-Blog is an application designed to help explaining Rails<br>
-        on Ruby. This blog was created by Aleksandar Kalabic  <br>
-        You can find me on <%= link_to 'Github:akalabic14', "https://github.com/akalabic14", :target => "_blank" %> <br>
-      </td>
-    </tr> 
-  </table>  
+  <div class = "sredina">
+    <div class = "jumbotron center" id = "about_jumbotron" align = "center">
+      Alpha-Blog is an application designed to help explaining Rails 
+      on Ruby. This blog was created by Aleksandar Kalabic           
+      You can find me on <%= link_to 'Github:akalabic14', 
+      "https://github.com/akalabic14", :target => "_blank" %>        
+    </div>
+  </div>
 </html>
 
