--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -19,12 +19,12 @@
         </div>
       </div>
       <div class="form-group">
-        <div class="col-sm-12">
+        <div class="col-sm-12 center">
           <%= f.submit class: 'btn btn-primary btn-lg' %>
         </div>
       </div>
-      <div class="col-sm-12">
-          <%= link_to "Cancel", articles_path, class: 'btn btn-danger btn-lg' %>
+      <div class="col-sm-12 center">
+        <%= link_to "Cancel", articles_path, class: 'btn btn-danger btn-md' %>
       </div>
     <% end %>
     
