--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,7 +1,3 @@
-<html>
-    
-  <div align = "center" style = "background-color:#959595;color:black">
-    <h2>Edit article</h2>
-    <%= render 'form' %>
-  </div>  
-</html>
+<h1 class="center">Edit article</h1>
+
+<%= render 'form' %>
