--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,8 +1,3 @@
-<html>
-    
-  <div align = "center" style = "background-color:#959595;color:black">
-    <h2>Create a new article</h2>
-    <%= render 'form' %>
-  </div>  
-</html>
+<h1 class="center">New article</h1>
 
+<%= render 'form' %>
