--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -105,6 +105,11 @@ padding-top: 10px;
 padding-bottom: 15px;
 }
 
+.article-meta-details {
+border-top: 1px solid #959595;
+margin-top: 15px;
+}
+
 footer {
 margin-top: 45px;
 padding-top: 5px;
