--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,3 +1,3 @@
 .center.jumbotron
   %h1 Welcome to the Alpha-Blog
-  = link_to 'Sign up now', "#", class: "btn btn-primary btn-lg btn-xlarge"
+  = link_to 'Sign up now', signup_path, class: "btn btn-primary btn-lg btn-xlarge"
