--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -79,12 +79,13 @@ color: #fff;
 }
 .article-actions {
 padding-top: 20px;
+margin-top: 15px;
 margin-bottom: -15px;
 text-align: center;
 }
 
 .article-title {
-margin-top: -15px;
+margin-top: -5px;
 font-weight: bold;
 font-size: 1.8em;
 text-align: center;
@@ -108,6 +109,16 @@ padding-bottom: 15px;
 .article-meta-details {
 border-top: 1px solid #959595;
 margin-top: 15px;
+}
+
+.listing {
+list-style: none;
+padding-left: 0;
+margin-top:15px;
+}
+
+.listing ul li {
+margin-top:10px;
 }
 
 footer {
