--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -3,12 +3,25 @@
   = simple_format(@article.description)
   .article-meta-details.center
     %small
-      Created by: #{@article.user.username if @article.user},
+      Created: 
       \#{time_ago_in_words(@article.created_at)} ago,
       last updated #{time_ago_in_words(@article.updated_at)} ago
+  - if @article.user
+    %ul.listing
+      .col-md-4.col-md-offset-4
+        %li Created by:
+        %li 
+          = link_to gravatar_for(@article.user), user_path(@article.user)
+        %li.article-title
+          = link_to @article.user.username, user_path(@article.user)
+        %li
+        %small
+          = pluralize(@article.user.articles.count, "article") if @article.user.articles
   .article-actions
-    = link_to "Edit", edit_article_path(@article), class: "btn btn-xm btn-primary"
-    = link_to "Delete", article_path(@article), method: :delete,        
-                      data: { confirm: "Are you sure you want to delete the article?"}, 
-                      class: "btn btn-xm btn-danger"                                    
-    = link_to "Back", articles_path, class: "btn btn-xm btn-default"
+    .col-md-4.col-md-offset-4
+      = link_to "Edit", edit_article_path(@article), class: "btn btn-xm btn-primary"
+      = link_to "Delete", article_path(@article), method: :delete,        
+                        data: { confirm: "Are you sure you want to delete the article?"}, 
+                        class: "btn btn-xm btn-danger"                                    
+      = link_to "Back", articles_path, class: "btn btn-xm btn-default"
+
