--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -12,7 +12,7 @@
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       %ul#navigaciona-dugmad.nav.navbar-nav
         %li= link_to 'Articles', articles_path
-        / <li><a href="#">Link</a></li>
+        %li= link_to 'Users', users_path
         %li.dropdown
           %a.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
             Actions
