added pagination, and fixed about

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -1,6 +1,5 @@
-.sredina
-  #about_jumbotron.jumbotron.center{:align => "center"}
-    Alpha-Blog is an application designed to help explaining Rails
-    on Ruby. This blog was created by Aleksandar Kalabic
-    You can find me on
-    =link_to 'Github:akalabic14', "https://github.com/akalabic14", {:target => "_blank"}
+.center.well.col-md-4.col-md-offset-4
+  Alpha-Blog is an application designed to help explaining Rails
+  on Ruby. This blog was created by Aleksandar Kalabic
+  You can find me on
+  =link_to 'Github:akalabic14', "https://github.com/akalabic14", {:target => "_blank"}
