--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -7,4 +7,8 @@
   %h4.center
     = @user.username
     's articles
-  = render 'articles/articles', obj: @user.articles
+  .center
+    = will_paginate @user_articles
+  = render 'articles/articles', obj: @user_articles
+  .center
+    = will_paginate @user_articles
