--- a/app/views/articles/_articles.html.haml
+++ b/app/views/articles/_articles.html.haml
@@ -10,8 +10,9 @@
           Created by: #{article.user.username if article.user},
           \#{time_ago_in_words(article.created_at)} ago,
           last updated #{time_ago_in_words(article.updated_at)} ago
-      .article-actions
-        = link_to "Edit", edit_article_path(article), class: "btn btn-xs btn-primary"
-        = link_to "Delete", article_path(article), method: :delete,         
-                            data: { confirm: "Are you sure you want to delete the article?"},
-                            class: "btn btn-xs btn-danger"
+      - if logged_in? && current_user == article.user
+        .article-actions
+          = link_to "Edit", edit_article_path(article), class: "btn btn-xs btn-primary"
+          = link_to "Delete", article_path(article), method: :delete,         
+                              data: { confirm: "Are you sure you want to delete the article?"},
+                              class: "btn btn-xs btn-danger"
