--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -19,9 +19,10 @@
           = pluralize(@article.user.articles.count, "article") if @article.user.articles
   .article-actions
     .col-md-4.col-md-offset-4
-      = link_to "Edit", edit_article_path(@article), class: "btn btn-xm btn-primary"
-      = link_to "Delete", article_path(@article), method: :delete,        
-                        data: { confirm: "Are you sure you want to delete the article?"}, 
-                        class: "btn btn-xm btn-danger"                                    
+      - if logged_in? && current_user == @article.user
+        = link_to "Edit", edit_article_path(@article), class: "btn btn-xm btn-primary"
+        = link_to "Delete", article_path(@article), method: :delete,        
+                          data: { confirm: "Are you sure you want to delete the article?"}, 
+                          class: "btn btn-xm btn-danger"                                    
       = link_to "Back", articles_path, class: "btn btn-xm btn-default"
 
