--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -13,40 +13,51 @@
       %ul#navigaciona-dugmad.nav.navbar-nav
         %li= link_to 'Articles', articles_path
         %li= link_to 'Users', users_path
-        %li.dropdown
-          %a.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
-            Actions
-            %span.caret
-          %ul#padajuca-lista.dropdown-menu
-            %li= link_to 'New Article', new_article_path
-        /    %li
-        /      %a{:href => "#"} Another action
-        /    %li
-        /      %a{:href => "#"} Something else here
-        /    %li.divider{:role => "separator"}
-        /    %li
-        /      %a{:href => "#"} Separated link
-        /    %li.divider{:role => "separator"}
-        /    %li
-        /      %a{:href => "#"} One more separated link
-  /    %form.navbar-form.navbar-left
-  /      .form-group
-  /        %input.form-control{:placeholder => "Search", :type => "text"}/
-  /      %button.btn.btn-default{:type => "submit"} Submit
-  /    %ul#navigaciona-dugmad.nav.navbar-nav.navbar-right
-  /      %li
-  /        %a{:href => "#"} Link
-  /      %li#padajuca-lista.dropdown
-  /        %a.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
-  /          Dropdown
-  /          %span.caret
-  /        %ul.dropdown-menu
-  /          %li
-  /            %a{:href => "#"} Action
-  /          %li
-  /            %a{:href => "#"} Another action
-  /          %li
-  /            %a{:href => "#"} Something else here
-  /          %li.divider{:role => "separator"}
-  /          %li
-  /            %a{:href => "#"} Separated link
+        - if logged_in?
+          %li.dropdown
+            %a.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
+              Actions
+              %span.caret
+            %ul#padajuca-lista.dropdown-menu
+              %li= link_to 'New Article', new_article_path
+              // %li= link_to 'Log out', logout_path, method: :delete
+              // %li
+              //   %a{:href => "#"} Something else here
+              // %li.divider{:role => "separator"}
+              // %li
+              //   %a{:href => "#"} Separated link
+              // %li.divider{:role => "separator"}
+              // %li
+              //   %a{:href => "#"} One more separated link
+        // %form.navbar-form.navbar-left
+        //   .form-group
+      //     %input.form-control{:placeholder => "Search", :type => "text"}/
+      //   %button.btn.btn-default{:type => "submit"} Submit
+      - if logged_in?
+        %ul#navigaciona-dugmad.nav.navbar-nav.navbar-right
+          %li#padajuca-lista.dropdown
+            %a.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
+              Settings
+              %span.caret
+            %ul.dropdown-menu
+              %li
+                = link_to 'Setup your account', edit_user_path(current_user)
+                = link_to 'See your articles', user_path(current_user)
+              %li.divider{:role => "separator"}
+              %li
+                = link_to 'Log out', logout_path(@current_user), method: :delete
+      - else
+        %ul#navigaciona-dugmad.nav.navbar-nav.navbar-right
+          %li#padajuca-lista.dropdown
+            %a.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
+              Sign up
+              %span.caret
+            %ul.dropdown-menu
+              %li
+                = link_to 'Register', signup_path
+              %li.divider{:role => "separator"}
+              %li
+                = link_to 'Take a sneak peek', articles_path
+          %li
+            = link_to 'Log in', login_path
+            
