--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,8 +1,9 @@
-.col-xs-12
-  = bootstrap_form_for @user, :html => {'accept-charset' => 'UTF-8'} do |f|
-    = f.text_field :username, class: "form-control", placeholder: "Enter username", autofocus: true
-    = f.email_field :email, class: "form-control", placeholder: "Enter your email"
-    = f.password_field :password, class: "form-control",placeholder: "Enter your password"
-    .form-inline.center  
-      = f.submit @user.new_record? ? 'Sign up' : 'Update account',  class: 'btn btn-primary btn-lg'
-      =link_to 'Cancel', articles_path, class: 'btn btn-danger btn-lg'
+.sredina
+  .col-xs-5
+    = bootstrap_form_for @user, :html => {'accept-charset' => 'UTF-8'} do |f|
+      = f.text_field :username, class: "form-control", placeholder: "Enter username", autofocus: true
+      = f.email_field :email, class: "form-control", placeholder: "Enter your email"
+      = f.password_field :password, class: "form-control",placeholder: "Enter your password"
+      .form-inline.center  
+        = f.submit @user.new_record? ? 'Sign up' : 'Update account',  class: 'btn btn-primary btn-lg'
+        =link_to 'Cancel', articles_path, class: 'btn btn-danger btn-lg'
