--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -7,8 +7,7 @@
   %h4.center
     = @user.username
     's articles
-  .center
-    = will_paginate @user_articles
-  = render 'articles/articles', obj: @user_articles
+= render 'articles/articles', obj: @user_articles
+.col-md-4.col-md-offset-4.center
   .center
     = will_paginate @user_articles
