--- a/app/views/articles/_articles.html.haml
+++ b/app/views/articles/_articles.html.haml
@@ -10,7 +10,7 @@
           Created by: #{article.user.username if article.user},
           \#{time_ago_in_words(article.created_at)} ago,
           last updated #{time_ago_in_words(article.updated_at)} ago
-      - if logged_in? && current_user == article.user
+      - if logged_in? && ( current_user == article.user || current_user.admin? )
         .article-actions
           = link_to "Edit", edit_article_path(article), class: "btn btn-xs btn-primary"
           = link_to "Delete", article_path(article), method: :delete,         
