--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -19,7 +19,7 @@
           = pluralize(@article.user.articles.count, "article") if @article.user.articles
   .article-actions
     .col-md-4.col-md-offset-4
-      - if logged_in? && current_user == @article.user
+      - if logged_in? && ( current_user == @article.user || current_user.admin? )
         = link_to "Edit", edit_article_path(@article), class: "btn btn-xm btn-primary"
         = link_to "Delete", article_path(@article), method: :delete,        
                           data: { confirm: "Are you sure you want to delete the article?"}, 
