--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -11,5 +11,10 @@
       %li
       %small
         = pluralize(user.articles.count, "article") if user.articles
+      - if logged_in? && current_user.admin? && !user.admin?
+        %li 
+          = link_to 'Delete user', user_path(user), method: :delete, 
+            data: { confirm: "Are you sure you want to delete this user and all his articles?" },
+            class: "btn btn-danger btn-md"
 .center.col-md-4.col-md-offset-4
   = will_paginate
