--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -13,6 +13,7 @@
       %ul#navigaciona-dugmad.nav.navbar-nav
         %li= link_to 'Articles', articles_path
         %li= link_to 'Users', users_path
+        %li= link_to 'Categories', categories_path
         - if logged_in?
           %li.dropdown
             %a.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
@@ -20,7 +21,8 @@
               %span.caret
             %ul#padajuca-lista.dropdown-menu
               %li= link_to 'New Article', new_article_path
-              // %li= link_to 'Log out', logout_path, method: :delete
+              - if current_user.admin?
+                %li= link_to 'New category', new_category_path
               // %li
               //   %a{:href => "#"} Something else here
               // %li.divider{:role => "separator"}
