--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -13,7 +13,6 @@
       %ul#navigaciona-dugmad.nav.navbar-nav
         %li= link_to 'Articles', articles_path
         %li= link_to 'Users', users_path
-        %li= link_to 'Categories', categories_path
         - if logged_in?
           %li.dropdown
             %a.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
@@ -21,8 +20,21 @@
               %span.caret
             %ul#padajuca-lista.dropdown-menu
               %li= link_to 'New Article', new_article_path
-              - if current_user.admin?
-                %li= link_to 'New category', new_category_path
+        %li.dropdown
+          %a.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
+            Categories
+            %span.caret
+          %ul#padajuca-lista.dropdown-menu
+            %li 
+              = link_to 'All categories', categories_path
+            %li.divider{:role => "separator"}
+            - Category.all.each do |category|
+              %li 
+                = link_to category.name, category_path(category)
+            - if logged_in? && current_user.admin?
+              %li.divider{:role => "separator"}
+              %li 
+                = link_to 'New category', new_category_path
               // %li
               //   %a{:href => "#"} Something else here
               // %li.divider{:role => "separator"}
