Worked on category view's

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -109,6 +109,20 @@ margin-top:15px;
 margin-top:10px;
 }
 
+.badge {
+background-color: #959595;
+letter-spacing: 1px;
+font-weight: bold;
+}
+
+.badge a{
+  color:#fff;
+}
+
+.input_checkbox input {
+width: auto !important;
+}
+
 footer {
 margin-top: 45px;
 padding-top: 5px;
