--- a/app/views/articles/_form.html.haml
+++ b/app/views/articles/_form.html.haml
@@ -3,5 +3,8 @@
     = f.text_field :title, class: "form-control", placeholder: "Title of article", autofocus: true
     = f.text_area :description, rows: 10, class: "form-control", placeholder: "Body of article"
     .form-inline.center  
+      = f.collection_check_boxes :category_ids, Category.all, :id, :name do |cb|
+        - cb.label(class: "checkbox-inline") { cb.check_box(class: "checkbox") + cb.text }
+    .form-inline.center  
       = f.submit 'Submit', class: 'btn btn-primary btn-lg'
       =link_to 'Cancel', articles_path, class: 'btn btn-danger btn-lg'
