--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -1,7 +1,9 @@
 %h1.center Listing all Categories
 = will_paginate
-.well.center.col-md-4.col-md-offset-4
-  - @categories.each do |category|
+- @categories.each do |category|
+  .well.center.col-md-4.col-md-offset-4
     %h3
       = link_to category.name, category_path(category)
+    %small
+      = pluralize(category.articles.count, "article")
 = will_paginate
